fixes for adaptive index on ie11

--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -449,6 +449,7 @@
         width: 100%;
         padding-right: 0;
         margin-bottom: 51px;
+        min-width: 0;
       }
 
       @include screen('sm') {
@@ -468,6 +469,7 @@
       @include screen('md') {
         width: 100%;
         flex: none;
+        min-width: 0;
       }
     }
   }
